--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -2,29 +2,108 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer base {
+  @font-face {
+    font-family: 'Nunito';
+    src:
+      url('/fonts/Nunito-VariableFont_wght.ttf') format('truetype'),
+      url('/fonts/Nunito-Italic-VariableFont_wght.ttf') format('truetype');
+    font-style: normal;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+  }
 
-@media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 70, 70, 0;
-    --background-end-rgb: 0, 70, 70;
+    --dark-orange-color: #ff8800;
+    --kelly-green-color: #40ba21;
+    --lawn-green-color: #7ce90f;
+    --picton-blue-color: #08aafc;
+    --alice-blue-color: #d8effc;
+    --white-smoke-color: #f5f5f5;
+    --jet-black-color: #292929;
+    --oxford-blue-color: #021b38;
+
+    --bg-body-gradient: linear-gradient(
+      to right top,
+      var(--white-smoke-color),
+      #f1f2f7,
+      #ebf1fa,
+      #e2f0fc,
+      var(--alice-blue-color)
+    );
+
+    --background: : 222.2 84% 4.9%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --bg-body-gradient: linear-gradient(
+      to right top,
+      var(--jet-black-color),
+      #25252c,
+      #1f2130,
+      #151e34,
+      var(--oxford-blue-color)
+    );
+
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+
+  body {
+    @apply bg-body-custom-gradient;
+    @apply font-nunito;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-} */
